--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     display: flex;
     background-color: #1F2937;
     justify-content: space-around;
+    align-items: center;
+    padding: 15px;
 }
  .logo {
      color: #F9FAF8;
@@ -17,4 +19,48 @@
     font-size: 18px;
     display: flex;
     gap: 20px;
+}
+.main {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 40px;
+    padding-top: 90px;
+}
+.leftside {
+    display: flex;
+    flex-direction: column;
+    background-color: #1F2937;
+    width: 450px;
+    justify-content: center;
+    align-items: center;
+}
+.hero {
+    font-size: 48px;
+    font-weight: 800;
+}
+.secondary {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+.button {
+    display: flex;
+    flex: 0;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 15px;
+    height: 10px;
+    align-items: center;
+    align-self: flex-start;
+    margin-top: 15px;
+}
+.rightside {
+    display: flex;
+    background-color: #1F2937;
+}
+img {
+    height: auto;
+    width: 450px;
 }
