--- a/style.css
+++ b/style.css
@@ -50,7 +50,9 @@
     flex: 0;
     background-color: #3882F6;
     border-radius: 10px;
-    padding: 15px;
+    padding: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
     height: 10px;
     align-items: center;
     align-self: flex-start;
@@ -123,4 +125,61 @@ img {
     display: flex;
     font-weight: 800;
     align-self:flex-end;
+}
+.bottom-white {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 80px;
+}
+.box {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3882F6;
+    padding-left: 50px;
+    padding-right: 50px;
+    height: 100px;
+    width: 750px;
+    border-radius: 5px;
+}
+.left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+.action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+}
+.sign-up {
+    display: flex;
+    font-size: 15px;
+    font-weight: 100;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+.button-two {
+    display: flex;
+    color: white;
+    border: solid white;
+    border-width: thin;
+    background-color: #3882F6;
+    border-radius: 10px;
+    padding: 10px;
+    width: 100px;
+    height: 15px;
+    justify-content: center;
+    align-items: center;
 }
