--- a/style.css
+++ b/style.css
@@ -30,6 +30,13 @@ a:visited {
 a:hover {
     color: #3882F6;
 }
+button {
+    background: transparent;
+    box-shadow: 0px 0px 0px transparent;
+    border: 0px solid transparent;
+    text-shadow: 0px 0px 0px transparent;
+    color: white;
+}
 .main {
     display: flex;
     flex: 1;
